# induction-head-leakage-8afa-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt  sweep_top2.json  sweep_top3.json
paper/: OUTLINE.md
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: main_results.tex  sensitivity_runs.tex  statistical_tests.tex
paper_search_results/: induction_heads_leakage_language_models_copying_random_outputs_20260420_002934.jsonl  induction_heads_leakage_language_models_copying_random_outputs_20260420_003314.jsonl
papers/: README.md  metadata.json
papers/pages/2209/: 2209.11895_in_context_learning_and_induction_heads_manifest.txt
papers/pages_2404/: 2404.10859_forcing_diffuse_distributions_manifest.txt
papers/pages_2407/: 2407.07011_induction_heads_pattern_matching_icl_manifest.txt
research_workspace/: __init__.py
results/: copy_task_prompt_level.csv  copy_task_summary.csv  dataset_summary.json  random_bias_prompt_level.csv  summary.json  wikitext_utility.csv
src/: run_induction_leakage_experiments.py
(+2 files in other folders)
