[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=3.0.0",
    "datasets>=4.8.4",
    "huggingface-hub>=1.11.0",
    "pypdf>=6.10.2",
    "requests>=2.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
